--- a/services.yaml
+++ b/services.yaml
@@ -26,7 +26,7 @@ spec:
     app: mongodb
   type: NodePort
   ports:
-    - name: rabbitmq
+    - name: mongodb
       port: 27017
       targetPort: 27017
       nodePort: 30002
