--- a/helm/templates/mongodb-deployment.yaml
+++ b/helm/templates/mongodb-deployment.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-mongodb
+  name: "{{ .Release.Name }}-mongodb"
 spec:
   replicas: 1 # 1 pod (note: every pod is independent to each other)
   selector:
     matchLabels:
-      app: mongodb
+      app: "{{ .Release.Name }}-mongodb"
   template: # configuration for a mongodb container wrapped in a pod
-    metadata: 
-      labels: 
-        app: mongodb
+    metadata:
+      labels:
+        app: "{{ .Release.Name }}-mongodb"
     spec:
       containers:
-        - name: mongodb
+        - name: "{{ .Release.Name }}-mongodb"
           image: mongo
-          ports: 
+          ports:
             - containerPort: 27017
           resources:
             limits:
               cpu: 500m
               memory: 512Mi
-            requests: 
+            requests:
               cpu: 500m
               memory: 512Mi
           livenessProbe:
