--- a/helm/templates/mongodb-service.yaml
+++ b/helm/templates/mongodb-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-mongodb
+  name: "{{ .Release.Name }}-mongodb"
 spec:
   selector: # the service is applied to pods whose label equals to "app: mongodb"
-    app: mongodb
+    app: "{{ .Release.Name }}-mongodb"
   type: ClusterIP
   ports:
-    - name: mongodb
+    - name: mongodb-port
       port: 27017
       targetPort: 27017
