--- a/helm/templates/rabbitmq-deployment.yaml
+++ b/helm/templates/rabbitmq-deployment.yaml
@@ -1,28 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-rabbitmq
+  name: "{{ .Release.Name }}-rabbitmq"
 spec:
   replicas: 1 # 1 pod (note: every pod is independent to each other)
   selector:
     matchLabels:
-      app: rabbitmq
+      app: "{{ .Release.Name }}-rabbitmq"
   template: # configuration for a rabbitmq container wrapped in a pod
-    metadata: 
-      labels: 
-        app: rabbitmq
+    metadata:
+      labels:
+        app: "{{ .Release.Name }}-rabbitmq"
     spec:
       containers:
-        - name: rabbitmq
+        - name: "{{ .Release.Name }}-rabbitmq"
           image: rabbitmq:3.9.18-management-alpine
-          ports: 
+          ports:
             - containerPort: 5672
             - containerPort: 15672
           resources:
             limits:
               cpu: 500m
               memory: 512Mi
-            requests: 
+            requests:
               cpu: 500m
               memory: 512Mi
           livenessProbe:
