--- a/helm/templates/server-service.yaml
+++ b/helm/templates/server-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-server
+  name: "{{ .Release.Name }}-server"
 spec:
   selector: # the service is applied to pods whose label equals to "app: server"
-    app: server
+    app: "{{ .Release.Name }}-server"
   type: ClusterIP
   ports:
-    - name: server
+    - name: server-port
       port: 30005
       targetPort: 30005
