--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "crawler1",
+  "name": "youbike-crawler",
   "version": "1.0.0",
-  "description": "",
+  "description": "A crawler for Youbike data",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
